add template service, repository
