# src/main/kotlin/team/mcqueen/smartdisplay/controller/TemplatesController.kt
@@ -3,51 +3,39 @@ package team.mcqueen.smartdisplay.controller
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import team.mcqueen.smartdisplay.generated.api.TemplatesApi
+import team.mcqueen.smartdisplay.generated.model.LightTemplate
 import team.mcqueen.smartdisplay.generated.model.Template
 import team.mcqueen.smartdisplay.generated.model.TemplateInput
+import team.mcqueen.smartdisplay.service.TemplateService
 
 @RestController
-class TemplatesController : TemplatesApi {
+class TemplatesController(
+    private val templateService: TemplateService
+) : TemplatesApi {
     override fun createTemplate(templateInput: TemplateInput): ResponseEntity<Template> {
-        return ResponseEntity.ok(Template(
-            id = 1,
-            name = "Base template",
-            body = "{tipa: json}"
+        return ResponseEntity.ok(templateService.createTemplate(
+            name = templateInput.name,
+            body = templateInput.body
         ))
     }
 
     override fun deleteTemplate(templateId: Long): ResponseEntity<Unit> {
-        return ResponseEntity.ok().build()
+        return ResponseEntity.ok(templateService.deleteTemplate(templateId))
     }
 
     override fun getTemplateById(templateId: Long): ResponseEntity<Template> {
-        return ResponseEntity.ok(Template(
-            id = 1,
-            name = "Base template",
-            body = "{tipa: json}"
-        ))
+        return ResponseEntity.ok(templateService.getTemplateById(templateId))
     }
 
-    override fun getTemplates(): ResponseEntity<List<Template>> {
-        return ResponseEntity.ok(listOf(
-            Template(
-            id = 1,
-            name = "Base template",
-            body = "{tipa: json}"
-        ),
-            Template(
-                id = 2,
-                name = "Cute template",
-                body = "{tipa: ne_jыson_vashe_nepon}"
-            )
-        ))
+    override fun getTemplates(): ResponseEntity<List<LightTemplate>>  {
+        return ResponseEntity.ok(templateService.getTemplates())
     }
 
     override fun updateTemplate(templateId: Long, templateInput: TemplateInput): ResponseEntity<Template> {
-        return ResponseEntity.ok(Template(
-            id = 1,
-            name = "Base template",
-            body = "{tipa: json}"
+        return ResponseEntity.ok(templateService.updateTemplate(
+            templateId = templateId,
+            name = templateInput.name,
+            body = templateInput.body
         ))
     }
 
