# src/main/resources/openapi/api.yaml
@@ -372,7 +372,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Template'
+                  $ref: '#/components/schemas/LightTemplate'
         '401':
           $ref: '#/components/responses/Unauthorized'
 
@@ -868,6 +868,18 @@ components:
                 position: 1
               - type: "PARKING"
                 position: 2
+
+    LightTemplate:
+      type: object
+      required: [ id, name]
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 3
+        name:
+          type: string
+          example: "Стандартный шаблон подъезда"
 
     TemplateInput:
       type: object
